<resources>
    <string name="app_name">瓜皮皮</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="success_save">已成功保存到本地</string>
    <string name="msg_could_not_save_photo">无法保存图片</string>
    <string name="action_settings">Settings</string>
    <string name="msg_clipping_image">正在裁剪图片</string>
    <string name="save_photo">保存图片</string>
    <string name="home">瓜皮</string>
    <string name="home_message">消息</string>
    <string name="home_friend">好友</string>
    <string name="home_setting">设置</string>
    <string name="home_guide">新手引导</string>
    <string name="home_invite">邀请好友</string>
    <string name="home_edit_user">点击编辑 / 查看</string>
    <string name="home_exit">退出</string>
    <string name="wallet_money">钱包余额支付（余额:%s)元</string>
    <string name="hb_dis">距离%skm</string>
    <string name="comment_count">评论(%s)</string>
    <string name="no_datas">暂未获取到任何数据</string>
    <string name="error_open_camera_error">摄像头权限被禁止！</string>
    <string name="giving_camera2_permissions">需要相机权限</string>
</resources>
